--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+  <!-- font-awesome -->
+  <script src="https://kit.fontawesome.com/141b59ba05.js" crossorigin="anonymous"></script>
   <title>Dental Services </title>
 </head>
 
